Gradient Paint doesn't work with metal

XMLWordPrintable

    • 2d
    • Verified

      The Following options of Paint.GradAnim tests of J2DDemo fails for metal pipeline.
      1. 2 color GradientPaint
      2. 3 color LinearGradientPaint
      3. 4 color RadialGradientPaint
      4. 4 color RadialGradientPaint with focus
      They are very slow compare to opengl. and also not proper.
      Screenshot for 2 color GradientPaint is attached.

        1. metal.png
          228 kB
          Tejpal Rebari
        2. opengl.png
          425 kB
          Tejpal Rebari

            Assignee:
            Alexey Ushakov
            Reporter:
            Tejpal Rebari (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: