8242920: Gradient Paint doesn't work with metal